<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layout_background_dark"
        android:fitsSystemWindows="true"
        android:elevation="4dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_scrollFlags="scroll|enterAlways"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.5dp"
            android:orientation="horizontal"
            android:background="@color/layout_background_light"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:elevation="2dp"
                app:srcCompat="@drawable/ic_round_folder_24"
                app:tint="@color/color_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_small"
                android:gravity="center"
                android:paddingBottom="@dimen/spacing_small"
                android:paddingEnd="@dimen/spacing_medium"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingTop="@dimen/spacing_small"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/color_text"
                android:text="@string/show_all"
                tools:text="모두 보기" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_diary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_gravity="bottom|end"
        app:backgroundTint="@android:color/transparent"
        app:borderWidth="0dp"
        app:fabSize="auto"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_sharp_edit_24"
        tools:ignore="ContentDescription" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>