<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layout_background_dark">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/spacing_medium"
                android:paddingEnd="@dimen/spacing_medium_large"
                android:paddingStart="@dimen/spacing_medium_large"
                android:paddingTop="@dimen/spacing_medium"
                android:textSize="@dimen/text_size_dialog_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="폴더 생성" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:gravity="center_vertical"
                android:hint="@string/folder_name"
                app:boxBackgroundColor="@color/layout_background_dark"
                app:boxStrokeColor="@color/color_icon"
                app:boxStrokeErrorColor="@color/error"
                app:boxStrokeWidth="0dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/color_icon"
                app:errorEnabled="true"
                app:errorIconTint="@color/error"
                app:errorTextAppearance="@style/WellTodayMediumFontFamilyStyle"
                app:errorTextColor="@color/error"
                app:helperTextEnabled="false"
                app:helperTextTextAppearance="@style/WellTodayMediumFontFamilyStyle"
                app:hintTextColor="@color/color_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_smallest"
                    android:fontFamily="@font/well_today_medium"
                    android:gravity="center_vertical"
                    android:inputType="textPersonName"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/text_size_dialog_message"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textColorHighlight="@color/text_input_edit_text_highlight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/selectFolderColorContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginEnd="@dimen/spacing_small"
                    android:layout_marginStart="@dimen/spacing_medium_large">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_folder_color"
                        android:textSize="@dimen/text_size_dialog_message"
                        android:padding="8dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_folder_color_message"
                        android:textColor="@color/text_disabled"
                        android:textSize="@dimen/text_size_smallest"
                        android:paddingBottom="@dimen/spacing_smallest"
                        android:paddingEnd="@dimen/spacing_small"
                        android:paddingStart="@dimen/spacing_small" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/folderColor"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/spacing_medium_large"
                    app:cardCornerRadius="8dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium_large"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:paddingBottom="@dimen/spacing_small"
                android:paddingEnd="@dimen/spacing_medium"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingTop="@dimen/spacing_small"
                android:text="@string/ok"
                android:textColor="@color/text_accent_dark"
                android:textSize="@dimen/text_size_large"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectFolderColorContainer" />

            <TextView
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_small"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/cancel"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_large"
                android:paddingBottom="@dimen/spacing_small"
                android:paddingEnd="@dimen/spacing_medium"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingTop="@dimen/spacing_small"
                app:layout_constraintEnd_toStartOf="@+id/okButton"
                app:layout_constraintTop_toTopOf="@+id/okButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>